# yadal

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: args.rs  auth.rs  downloader.rs  main.rs  types.rs
