[package]
name = "yadal"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.46.1", features = ["full", "rt"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["stream", "rustls-tls"] }
futures = "0.3"
sanitize-filename = "0.6"
bytes = "1.9"
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"
tidlers = { git = "https://codeberg.org/tomkoid/tidlers", version = "0.1.0" }
directories = "5.0"
